--- a/about-us-ar.html
+++ b/about-us-ar.html
@@ -421,7 +421,7 @@
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-5">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div
-                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content vision" style="margin-top: 120px;">
+                                            class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content vision" >
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
                                                     id="div_983a_26">
@@ -478,7 +478,7 @@
                                 </div>
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 mleft-5">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values">
+                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js values" style="margin-top: 130px;">
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr pad3"
                                                     id="div_983a_26">
