--- a/lifeinriyadh-ar.html
+++ b/lifeinriyadh-ar.html
@@ -60,8 +60,8 @@
 
                             <li class="menu-item"><a href="scholarships-ar.html">المنح الدراسية</a></li>
                             <li class="menu-item"><a href="admission-ar.html">تسجيل</a></li>
-                            <li class="menu-item"><a href="lifeinriyadh-ar.html">Life in Riyadh</a></li>
-                            <li class="menu-item"><a href="collaboration-ar.html">Collaboration</a></li>
+                            <li class="menu-item"><a href="lifeinriyadh-ar.html">الحياة في الرياض</a></li>
+                            <li class="menu-item"><a href="collaboration-ar.html">التعاون</a></li>
                             <li class="menu-item current-menu-item"><a href="gallery-ar.html">المعرض</a></li>
                             <li class="menu-item"><a href="contact-ar.html">تواصل معنا</a></li>
                         </ul>
