--- a/programs-ar.html
+++ b/programs-ar.html
@@ -44,18 +44,18 @@
                             <li class="menu-item"><a href="index-ar.html">الرئيسية</a>
 
                             </li>
-                            <li class="menu-item menu-item-home current-menu-item"><a href="about-us-ar.html">من نحن</a>
+                            <li class="menu-item"><a href="about-us-ar.html">من نحن</a>
 
                             </li>
                             <li class="menu-item"><a href="services-ar.html">خدماتنا</a>
                             </li>
-                            <li class="menu-item"><a href="programs-ar.html">البرامج</a>
+                            <li class="menu-item menu-item-home current-menu-item"><a href="programs-ar.html">البرامج</a>
                             </li>
 
                             <li class="menu-item"><a href="scholarships-ar.html">المنح الدراسية</a></li>
                             <li class="menu-item"><a href="admission-ar.html">تسجيل</a></li>
-                            <li class="menu-item"><a href="lifeinriyadh-ar.html">Life in Riyadh</a></li>
-                            <li class="menu-item"><a href="collaboration-ar.html">Collaboration</a></li>
+                            <li class="menu-item"><a href="lifeinriyadh-ar.html">الحياة في الرياض</a></li>
+                            <li class="menu-item"><a href="collaboration-ar.html">التعاون</a></li>
                             <li class="menu-item"><a href="gallery-ar.html">المعرض</a></li>
                             <li class="menu-item"><a href="contact-ar.html">تواصل معنا</a></li>
                         </ul>
@@ -79,8 +79,9 @@
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <div class="kingster-top-bar-right-social"></div>
-                            <a class="kingster-top-bar-right-button" href="lifeinriyadh-ar.html">الحياة في الرياض</a>
-                            <a class="kingster-top-bar-right-button " href="collaboration-ar.html">Collaboration</a>
+                            <a class="kingster-top-bar-right-button " href="lifeinriyadh-ar.html">الحياة في
+                                الرياض</a>
+                            <a class="kingster-top-bar-right-button " href="collaboration-ar.html">التعاون</a>
                             <a class="kingster-top-bar-right-button " href="gallery-ar.html">المعرض</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -167,13 +168,13 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
-                                                    <a href="foundation-studies.html">
+                                                    <a href="foundation-studies-ar.html">
                                                         <img src="img/Programs/Foundation-Studies.png" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <h5 class="title5 prog-title-ar ar-float">شهادة أساسيات التصميم</h5>
+                                        <h5 class="title5 prog-title-ar ar-float">شـهـادة أسـاسـيـات الـتـصـمـيـم</h5>
                                     </div>
                                     <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20">
@@ -181,13 +182,13 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
-                                                    <a href="visual-communication.html">
+                                                    <a href="visual-communication-ar.html">
                                                         <img src="img/Programs/Visual-Communication.png" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <h5 class="programmes-h5 title5">Visual Communication</h5>
+                                        <h5 class="prog-title-ar ar-float title5">تـصـمـيـم الاتـصـال الـمـرئـي</h5>
                                     </div>
                                     <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 ">
@@ -195,13 +196,14 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
-                                                    <a href="fashion-management-design.html">
+                                                    <a href="fashion-management-design-ar.html">
                                                         <img src="img/Programs/Fashion-Marketing-Management-Design.png"
                                                             width="700" height="660" alt="" /></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <h5 class="programmes-h5 title5">Fashion Marketing & Management Design</h5>
+                                        <h5 class="prog-title-ar ar-float title5">الـتـسـويــق وإدارة الأزيــاء
+                                        </h5>
                                     </div>
                                     <div data-aos="fade-right" data-aos-duration="500"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 gdlr-core-column-first">
@@ -209,13 +211,14 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
-                                                    <a href="interior-design.html">
+                                                    <a href="interior-design-ar.html">
                                                         <img src="img/Programs/Interior-Design.png" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <h5 class="programmes-h5 title5">Interior Design</h5>
+                                        <h5 class="prog-title-ar ar-float title5">الـتـصـمـيـم الـداخـلـي
+                                        </h5>
                                     </div>
                                     <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 ">
@@ -223,13 +226,14 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
-                                                    <a href="jewelery-design.html">
+                                                    <a href="jewelery-design-ar.html">
                                                         <img src="img/Programs/Jewelery-Design.png" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <h5 class="programmes-h5 title5">Jewelry Design</h5>
+                                        <h5 class="prog-title-ar ar-float title5">تـصـمـيـم الـمـجـهـورات
+                                        </h5>
                                     </div>
                                     <div data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20">
@@ -237,14 +241,15 @@
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
-                                                    <a href="fashion-design.html">
+                                                    <a href="fashion-design-ar.html">
                                                         <img src="img/Programs/Fashion-Design.png" width="700"
                                                             height="660" alt="" />
                                                     </a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <h5 class="programmes-h5 title5">Fashion Design</h5>
+                                        <h5 class="prog-title-ar ar-float title5">تـصـمـيـم الأزيـــاء
+                                        </h5>
                                     </div>
                                 </div>
                             </div>
