--- a/foundation-studies-ar.html
+++ b/foundation-studies-ar.html
@@ -233,7 +233,7 @@
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css"><a href="#">تعلُم
                                                             الدراسة</a></h3>
-                                                    <p class="font-css">
+                                                    <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو مساعدة الطالبات على اكتشاف أنفسهم ليكونوا
                                                         أكثر استعداداً للنجاح في دراساتهم المستقبلية، ومن أحد الأهداف
                                                         الرئيسية لهذه الوحدة هو مساعدة الطالبات على تحديد المجال لإكمال
@@ -250,7 +250,7 @@
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css"><a href="#">الرسم
                                                             للمبتدئين</a></h3>
-                                                    <p class="font-css">
+                                                    <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو تطوير مهارات الملاحظة لدى الطالبات وتعلُم
                                                         مهارات الرسم والرسم بألوان الأبيض والأسود.
                                                         هذه الوحدة مخصصة للمبتدئين الذين لديهم مهارات قليلة في الرسم أو
@@ -269,7 +269,7 @@
                                                 <div class="gdlr-core-event-item-content-wrap">
                                                     <h3 class="gdlr-core-event-item-title titles-css"><a href="#">تاريخ
                                                             الفن</a></h3>
-                                                    <p class="font-css">
+                                                    <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو تعريف الطالبات بالفن وطرق التعبير عنه
                                                         قديماً في تاريخ البشرية، والتعريف بأهمية الفن في التنمية
                                                         البشرية.
@@ -288,7 +288,7 @@
                                                     <h3 class="gdlr-core-event-item-title titles-css"><a
                                                             href="#">الرياضيات للمصممين
                                                         </a></h3>
-                                                    <p class="font-css">
+                                                    <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو تطوير قدرة الطالبات على التفكير وتطبيق
                                                         مفاهيم وصيغ رياضية بسيطة عند الدخول في بيئة العمل.
                                                     </p>
