--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <a class="kingster-top-bar-right-button " href="gallery.html">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#"><img src="img/sa-flag.png"
+                                <li class="menu-item kingster-normal-menu"><a href="index-ar.html"><img src="img/sa-flag.png"
                                             width="35" alt=""></a></li>
                             </ul>
                         </div>
