--- a/index.html
+++ b/index.html
@@ -652,6 +652,14 @@
                                                         src="img/icon-play.png" alt="" width="82" height="82"
                                                         title="icon-play" /></a>
                                             </div>
+                                            <!-- <div class="gdlr-core-tab-item-image  gdlr-core-active" data-tab-id="1">
+                                                <a class="gdlr-core-lightgallery gdlr-core-js " href="https://www.youtube.com/watch?v=C5pKtnmHTxg">
+                                                    <span class="gdlr-core-tab-item-image-background" id="span_1dd7_1"></span>
+                                                    <i><img
+                                                        src="img/icon-play.png" alt="" width="82" height="82"
+                                                        title="icon-play" /></i>
+                                                </a>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
