--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                                 <li class="menu-item"><a href="collaboration.html">Collaboration</a></li>
                                 <li class="menu-item"><a href="gallery.html">Gallery</a></li>
                                 <li class="menu-item"><a href="contact.html">Contact Us</a></li>
+                                <li class="menu-item menu-item-has-children"><a href="#">Language</a>
+                                    <ul class="sub-menu">
+                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
+                                        <li class="menu-item webbox"><a href="index.html">English</a><img src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -138,6 +144,7 @@
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
                                         </a></li>
+                                    
                                 </ul>
                                 <div class="kingster-navigation-slide-bar" id="kingster-navigation-slide-bar"></div>
                             </div>
