--- a/services.html
+++ b/services.html
@@ -59,6 +59,12 @@
                                 <li class="menu-item"><a href="collaboration.html">Collaboration</a></li>
                                 <li class="menu-item"><a href="gallery.html">Gallery</a></li>
                                 <li class="menu-item"><a href="contact.html">Contact Us</a></li>
+                                <li class="menu-item menu-item-has-children"><a href="#">Language</a>
+                                    <ul class="sub-menu">
+                                        <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
+                                        <li class="menu-item webbox"><a href="index.html">English</a><img src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
