--- a/admission-ar.html
+++ b/admission-ar.html
@@ -33,7 +33,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="img/raffles-logo.png" class="logomob" alt="" /></a>
+                        <a class="" href="index-ar.html"><img src="img/raffles-logo.png" class="logomob" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -44,23 +44,32 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home "><a href="index.html">Home</a>
+                                <li class="menu-item menu-item-home text-ar1"><a
+                                        href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item"><a href="about-us.html">About us</a>
+                                <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
 
                                 </li>
-                                <li class="menu-item"><a href="services.html">Services</a>
+                                <li class="menu-item"><a href="services-ar.html" class="text-ar1">خدماتنا</a>
                                 </li>
-                                <li class="menu-item "><a href="programs.html">Programs</a>
+                                <li class="menu-item"><a href="programs-ar.html" class="text-ar1">البرامج</a>
                                 </li>
 
-                                <li class="menu-item"><a href="scholarships.html">Scholarships</a></li>
-                                <li class="menu-item current-menu-item"><a href="admission.html">Admission</a></li>
-                                <li class="menu-item"><a href="lifeinriyadh.html">Life in Riyadh</a></li>
-                                <li class="menu-item"><a href="collaboration.html">Collaboration</a></li>
-                                <li class="menu-item"><a href="gallery.html">Gallery</a></li>
-                                <li class="menu-item"><a href="contact.html">Contact Us</a></li>
+                                <li class="menu-item"><a href="scholarships-ar.html" class="text-ar1">المنح الدراسية</a>
+                                </li>
+                                <li class="menu-item current-menu-item"><a href="admission-ar.html" class="text-ar1">تسجيل</a></li>
+                                <li class="menu-item"><a href="lifeinriyadh-ar.html" class="text-ar1">الحياة في
+                                        الرياض</a></li>
+                                <li class="menu-item"><a href="collaboration-ar.html" class="text-ar1">تعاون</a></li>
+                                <li class="menu-item"><a href="gallery-ar.html" class="text-ar1">المعرض</a></li>
+                                <li class="menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
+                                <li class="menu-item menu-item-has-children lang1"><a href="#">اللغه</a>
+                                    <ul class="sub-menu">
+                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt="" class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a></li>
+                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt="" class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
