--- a/index.html
+++ b/index.html
@@ -172,73 +172,7 @@
                                                 style="display:none;" data-version="5.4.8">
                                                 <ul>
 
-                                                    <li data-index="rs-6" data-transition="fade"
-                                                        data-slotamount="default" data-hideafterloop="0"
-                                                        data-hideslideonmobile="off" data-easein="default"
-                                                        data-easeout="default" data-masterspeed="300"
-                                                        data-thumb="upload/slider-hp2-2-100x50.jpg" data-rotate="0"
-                                                        data-saveperformance="off" data-title="Slide" data-param1=""
-                                                        data-param2="" data-param3="" data-param4="" data-param5=""
-                                                        data-param6="" data-param7="" data-param8="" data-param9=""
-                                                        data-param10="" data-description=""> <img src="img/13-02.png"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
-                                                            data-bgposition="center center" data-bgfit="cover"
-                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
-                                                            data-no-retina>
-
-                                                        <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme mrg1"
-                                                            id="slide-6-layer-8" data-x="537" data-y="center"
-                                                            data-voffset="-10" data-width="['380']"
-                                                            data-height="['100']" data-type="shape"
-                                                            data-responsive_offset="on"
-                                                            data-frames='[{"delay":350,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
-                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                                            style="z-index: 6;background-color: #EB8223;"></div>
-
-                                                        <div class="tp-caption   tp-resizeme mrg2" id="slide-6-layer-3"
-                                                            data-x="570" data-y="center" data-voffset="-15"
-                                                            data-width="['auto']" data-height="['auto']"
-                                                            data-type="text" data-responsive_offset="on"
-                                                            data-frames='[{"delay":690,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
-                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                                            style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 80px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-transform: uppercase;">
-                                                            Who we are</div>
-                                                        <div class="tp-caption txt-align tp-resizeme home-prg mrg3"
-                                                            id="slide-6-layer-9" data-x="538" data-y="400"
-                                                            data-voffset="129" data-width="['746']"
-                                                            data-height="['auto']" data-type="text"
-                                                            data-responsive_offset="on"
-                                                            data-frames='[{"delay":980,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
-                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                                            Raffles Design Institute is a design school based in Riyadh,
-                                                            Saudi Arabia, It is an institute
-                                                            emerging from the partnership between Raffles International
-                                                            Institutes and Tamkeen
-                                                            Company, that offers internationally accredited advanced
-                                                            diplomas. Our curriculum is
-                                                            designed to empower Saudi female students to innovate, and
-                                                            we offer specialized design
-                                                            courses that aim to help them improve their creative skills
-                                                            and prepare them with all the
-                                                            knowledge they need to enter the job market, putting them on
-                                                            the path to success.
-                                                        </div>
-                                                        <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme mrg4"
-                                                            id="slide-6-layer-10" data-x="539" data-y="615"
-                                                            data-voffset="201" data-width="['285']" data-height="['6']"
-                                                            data-type="shape" data-responsive_offset="on"
-                                                            data-frames='[{"delay":1290,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
-                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
-                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                                                            style="z-index: 10;background-color: #EB8223;"></div>
-                                                    </li>
+                                                    
                                                     <li data-index="rs-7" data-transition="fade"
                                                         data-slotamount="default" data-hideafterloop="0"
                                                         data-hideslideonmobile="off" data-easein="default"
@@ -248,6 +182,64 @@
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
                                                         data-param10="" data-description=""> <img src="img/44.png"
+                                                            alt="" title="slider-hp2-2" width="1800" height="958"
+                                                            data-bgposition="center center" data-bgfit="cover"
+                                                            data-bgrepeat="no-repeat" class="rev-slidebg"
+                                                            data-no-retina>
+
+                                                        <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme mrg19"
+                                                            id="slide-6-layer-8" data-x="center" data-y="center"
+                                                            data-voffset="-10" data-width="['570']"
+                                                            data-height="['100']" data-type="shape"
+                                                            data-responsive_offset="on"
+                                                            data-frames='[{"delay":350,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
+                                                            style="z-index: 6;background-color: #EB8223;"></div>
+
+                                                        <div class="tp-caption   tp-resizeme mrg20" id="slide-6-layer-3"
+                                                            data-x="center" data-y="center" data-voffset="-15"
+                                                            data-width="['auto']" data-height="['auto']"
+                                                            data-type="text" data-responsive_offset="on"
+                                                            data-frames='[{"delay":690,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
+                                                            style="z-index: 8; white-space: nowrap; font-size: 50px; line-height: 80px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-transform: uppercase;">
+                                                            DESIGN YOUR FUTURE</div>
+                                                        <!-- <div class="tp-caption txt-align tp-resizeme home-prg mrg3"
+                                                            id="slide-6-layer-9" data-x="538" data-y="400"
+                                                            data-voffset="129" data-width="['746']"
+                                                            data-height="['auto']" data-type="text"
+                                                            data-responsive_offset="on"
+                                                            data-frames='[{"delay":980,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
+                                                            
+                                                        </div> -->
+                                                        <!-- <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme mrg4"
+                                                            id="slide-6-layer-10" data-x="539" data-y="615"
+                                                            data-voffset="201" data-width="['285']" data-height="['6']"
+                                                            data-type="shape" data-responsive_offset="on"
+                                                            data-frames='[{"delay":1290,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                                                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                                                            data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
+                                                            data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
+                                                            style="z-index: 10;background-color: #EB8223;"></div> -->
+                                                    </li>
+
+
+                                                    <li data-index="rs-6" data-transition="fade"
+                                                        data-slotamount="default" data-hideafterloop="0"
+                                                        data-hideslideonmobile="off" data-easein="default"
+                                                        data-easeout="default" data-masterspeed="300"
+                                                        data-thumb="upload/slider-hp2-2-100x50.jpg" data-rotate="0"
+                                                        data-saveperformance="off" data-title="Slide" data-param1=""
+                                                        data-param2="" data-param3="" data-param4="" data-param5=""
+                                                        data-param6="" data-param7="" data-param8="" data-param9=""
+                                                        data-param10="" data-description=""> <img src="img/13-02.png"
                                                             alt="" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
