--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="img/fav-icon.png" rel="shortcut icon">
 
-    <title>Raffles University</title>
+    <title>Raffles Institute</title>
 
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/include/css/page-builder.css' type='text/css' media='all' />
@@ -582,7 +582,7 @@
                                                         <p class="txtmob1" data-aos="fade-right" data-aos-duration="500"
                                                             data-aos-delay="100">Within 5 years, multiple majors were
                                                             offered
-                                                            at<b> Raffles University</b>, including
+                                                            at<b> Raffles Institute</b>, including
                                                             (graphic design - product design - jewelry design - interior
                                                             design - game design - animation design).</p>
                                                     </div>
