--- a/services-ar.html
+++ b/services-ar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="img/fav-icon.png" rel="shortcut icon">
 
-    <title>Raffles University - Services</title>
+    <title>Raffles Institute - Services</title>
 
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/include/css/page-builder.css' type='text/css' media='all' />
@@ -317,10 +317,10 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title3"><a>تعليم
+                                                    <h3 class="gdlr-core-event-item-title titles-css title3 ar-font"><a>تعليم
                                                             متخصص
                                                         </a></h3>
-                                                    <p class="font-css text4 ar-float">
+                                                    <p class="font-css text4 ar-float ar-font">
                                                         يقدم رافلز تعليماً متخصصاً في التصميم بأقسامه المختلفة مثل (
                                                         التصميم الداخلي – تصميم المجوهرات – تصميم الأزياء – تصميم
                                                         الأتصال المرئي – إدارة وتسويق الأزياء )
@@ -335,10 +335,10 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title3"><a>نظام
+                                                    <h3 class="gdlr-core-event-item-title titles-css title3 ar-font"><a>نظام
                                                             تحويل مرن
                                                         </a></h3>
-                                                    <p class="font-css text4 ar-float">
+                                                    <p class="font-css text4 ar-float ar-font">
                                                         يحتوي معهد رافلز على نظام التحويل المرن الذي يسمح للطالبات
                                                         بالتحويل بين الجامعات وبالدراسة في اي من فروع معهد رافلز
                                                         والانغماس في ثقافات مختلفة وتجربة العيش في الخارج.
@@ -352,11 +352,11 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title3">
+                                                    <h3 class="gdlr-core-event-item-title titles-css title ar-font3">
                                                         <a>نظام تعليمي مرن
                                                         </a>
                                                     </h3>
-                                                    <p class="font-css text4 ar-float">
+                                                    <p class="font-css text4 ar-float ar-font">
                                                         تعزز برامجنا المبتكرة والمحفزة العمل أثناء التعلم والتعلم أثناء
                                                         العمل.
                                                     </p>
@@ -369,11 +369,11 @@
                                                         alt="" />
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap ar-float">
-                                                    <h3 class="gdlr-core-event-item-title titles-css title3">
+                                                    <h3 class="gdlr-core-event-item-title titles-css title3 ar-font">
                                                         <a>منح دراسية
                                                         </a>
                                                     </h3>
-                                                    <p class="font-css text4 ar-float">
+                                                    <p class="font-css text4 ar-float ar-font">
                                                         يوفر معهد رافلز منح دراسية للطلاب الدوليين والمحليين المهتمين
                                                         والمؤهلين للدراسة في معهد رافلز للتصميم
                                                     </p>
