--- a/collaboration-ar.html
+++ b/collaboration-ar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="img/fav-icon.png" rel="shortcut icon">
-    <title>Raffles University - Collaboration</title>
+    <title>Raffles Institute - Collaboration</title>
 
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/include/css/page-builder.css' type='text/css' media='all' />
