--- a/foundation-studies-ar.html
+++ b/foundation-studies-ar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="img/fav-icon.png" rel="shortcut icon">
 
-    <title>Raffles University - Foundation Studies</title>
+    <title>Raffles Institute - Foundation Studies</title>
 
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/include/css/page-builder.css' type='text/css' media='all' />
@@ -160,7 +160,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title ar-float found-ar">
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title ar-float found-ar ar-font">
                                                             شهادة أساسيات التصميم
                                                         </h3>
                                                     </div>
@@ -231,7 +231,7 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a href="#">تعلُم
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font"><a href="#">تعلُم
                                                             الدراسة</a></h3>
                                                     <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو مساعدة الطالبات على اكتشاف أنفسهم ليكونوا
@@ -247,8 +247,8 @@
                                                     <a href="#"><img src="img/foundation/drawing.jpg" width="900"
                                                             height="500" alt="" /></a>
                                                 </div>
-                                                <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a href="#">الرسم
+                                                <div class="gdlr-core-event-item-content-wrap"> 
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font"><a href="#">الرسم
                                                             للمبتدئين</a></h3>
                                                     <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو تطوير مهارات الملاحظة لدى الطالبات وتعلُم
@@ -267,7 +267,7 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a href="#">تاريخ
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font"><a href="#">تاريخ
                                                             الفن</a></h3>
                                                     <p class="font-css ar-float ar-font found-font">
                                                         الهدف من هذه الوحدة هو تعريف الطالبات بالفن وطرق التعبير عنه
@@ -285,7 +285,7 @@
                                                             height="500" alt="" /></a>
                                                 </div>
                                                 <div class="gdlr-core-event-item-content-wrap">
-                                                    <h3 class="gdlr-core-event-item-title titles-css"><a
+                                                    <h3 class="gdlr-core-event-item-title titles-css ar-font"><a
                                                             href="#">الرياضيات للمصممين
                                                         </a></h3>
                                                     <p class="font-css ar-float ar-font found-font">
