--- a/terms-conditions-ar.html
+++ b/terms-conditions-ar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="img/fav-icon.png" rel="shortcut icon">
 
-    <title>Raffles University - Terms & Conditions</title>
+    <title>Raffles Institute - Terms & Conditions</title>
 
     <link rel='stylesheet' href='plugins/goodlayers-core/plugins/combine/style.css' type='text/css' media='all' />
     <link rel='stylesheet' href='plugins/goodlayers-core/include/css/page-builder.css' type='text/css' media='all' />
