--- a/admission-ar.html
+++ b/admission-ar.html
@@ -44,8 +44,7 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home text-ar1"><a
-                                        href="index-ar.html">الرئيسية</a>
+                                <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
                                 <li class="menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
@@ -58,7 +57,8 @@
 
                                 <li class="menu-item"><a href="scholarships-ar.html" class="text-ar1">المنح الدراسية</a>
                                 </li>
-                                <li class="menu-item current-menu-item"><a href="admission-ar.html" class="text-ar1">تسجيل</a></li>
+                                <li class="menu-item current-menu-item"><a href="admission-ar.html"
+                                        class="text-ar1">تسجيل</a></li>
                                 <li class="menu-item"><a href="lifeinriyadh-ar.html" class="text-ar1">الحياة في
                                         الرياض</a></li>
                                 <li class="menu-item"><a href="collaboration-ar.html" class="text-ar1">تعاون</a></li>
@@ -66,8 +66,12 @@
                                 <li class="menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
                                 <li class="menu-item menu-item-has-children lang1"><a href="#">اللغه</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt="" class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a></li>
-                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt="" class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a></li>
+                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt=""
+                                                class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a>
+                                        </li>
+                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt=""
+                                                class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
@@ -687,8 +691,9 @@
 
             <div class="kingster-copyright-wrapper">
                 <div class="kingster-copyright-container kingster-container clearfix">
-                    <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue. All
-                        Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
+                    <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
+                        All
+                        Rights Reserved</div>
                     <div class="kingster-copyright-right kingster-item-pdlr">
                         <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                             style="padding-bottom: 0px ;">
