--- a/jewelery-design.html
+++ b/jewelery-design.html
@@ -668,8 +668,9 @@
 
                 <div class="kingster-copyright-wrapper">
                     <div class="kingster-copyright-container kingster-container clearfix">
-                        <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue. All
-                            Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
+                        <div class="kingster-copyright-left kingster-item-pdlr pad5">© 2023 Raffles Design Institue.
+                                    All
+                                    Rights Reserved</div>
                         <div class="kingster-copyright-right kingster-item-pdlr">
                             <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                 style="padding-bottom: 0px ;">
