--- a/visual-communication-ar.html
+++ b/visual-communication-ar.html
@@ -41,11 +41,11 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home text-ar1"><a
-                                        href="index-ar.html">الرئيسية</a>
+                                <li class="menu-item menu-item-home text-ar1"><a href="index-ar.html">الرئيسية</a>
 
                                 </li>
-                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من نحن</a>
+                                <li class="menu-item  current-menu-item"><a href="about-us-ar.html" class="text-ar1">من
+                                        نحن</a>
 
                                 </li>
                                 <li class="menu-item"><a href="services-ar.html" class="text-ar1">خدماتنا</a>
@@ -63,8 +63,12 @@
                                 <li class="menu-item"><a href="contact-ar.html" class="text-ar1">تواصل معنا</a></li>
                                 <li class="menu-item menu-item-has-children lang1"><a href="#">اللغه</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt="" class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a></li>
-                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt="" class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a></li>
+                                        <li class="menu-item webbox"><img src="img/sa-flag.png" width="30" alt=""
+                                                class="mrg16-ar"><a href="index-ar.html" class="mrg18">اللغه العربيه</a>
+                                        </li>
+                                        <li class="menu-item webbox"><img src="img/uk-flag.png" width="28" alt=""
+                                                class="mrg17-ar"><a href="index.html" class="mrg18">اللغه الإنجليزيه</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
@@ -174,8 +178,8 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis">
-                                                            Visual Communication</h3>
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis ar-font">
+                                                            تصميم الاتصال المرئي</h3>
                                                     </div>
                                                 </div>
                                             </div>
@@ -199,14 +203,18 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div
-                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
-                                                        <p>It is the field that combines design and technology, and it
-                                                            is the tool which is used to
-                                                            carry creative ideas from the product to the target audience
-                                                            in a visual language.
-                                                            This program offers the study of basic theories and
-                                                            technical skills in design, and
-                                                            then work on their implementation.
+                                                        class="gdlr-core-text-box-item-content prg-width p-color mrg-lft ar-font">
+                                                        <p class="ar-float">هو التخصص الذي يجمع بين التصميم
+                                                            والتكنولوجيا، وهو الأداة التي
+                                                            تُستخدم لنقل الأفكار الإبداعية من المُنتج إلى الجمهور
+                                                            المستهدف بلغة مرئية.
+                                                            وهذا البرنامج يقدم دراسة النظريات الأساسية والمهارات الفنية
+                                                            <br>في التصميم، ومن ثم العمل على تنفيذها.
+
+
+                                                            الفرص الوظيفية المتاحة بعد الانتهاء من دبلوم الاتصال المرئي:
+                                                            مديرة تصميم - مدير فني للإعلان - مصممة مواد تحريرية - مصممة
+                                                            هوية المؤسسات - أخصائية رسوم إيضاحية
                                                         </p>
                                                     </div>
                                                 </div>
@@ -228,7 +236,7 @@
                                             style="margin-bottom: 37px ;">
                                             <div class="gdlr-core-block-item-title-inner clearfix">
                                                 <h3 class="gdlr-core-block-item-title titlestyle">
-                                                    MODULES</h3>
+                                                    المقررات الدراسية</h3>
                                                 <div class="gdlr-core-block-item-title-divider">
                                                 </div>
                                             </div>
@@ -468,7 +476,7 @@
                             <div class="kingster-copyright-container kingster-container clearfix">
                                 <div class="kingster-copyright-left kingster-item-pdlr">© 2023 Raffles Design Institue.
                                     All
-                                    Rights Reserved To <a href="khpmarketingagency.com">KHP Marketing Agency</a></div>
+                                    Rights Reserved</div>
                                 <div class="kingster-copyright-right kingster-item-pdlr">
                                     <div class="gdlr-core-social-network-item gdlr-core-item-pdb  gdlr-core-none-align"
                                         style="padding-bottom: 0px ;">
